syntax = "proto2";

package trpc.register;

message SsoC2CMsgCookie {
  optional uint64 c2c_last_msg_time = 1;
}

message SsoC2CSyncInfo {
  required bytes c2c_msg_cookie = 1;
  required uint64 c2c_last_msg_time = 2;
  required bytes last_c2c_msg_cookie = 3;
}

message DeviceInfo {
  required string dev_name = 1;
  required string dev_type = 2;
  required string os_ver = 3;
  required string brand = 4;
  required string vendor_os_name = 5;
}

message OnLineBusinessInfo {
  required uint32 notify_switch = 1;
  required uint32 bind_uin_notify_switch = 2;
}

message RegisterInfo {
  required string guid = 1;
  required uint32 kick_pc = 2;
  required string build_ver = 3;
  required uint32 is_first_register_proxy_online = 4;
  required uint32 locale_id = 5;
  required DeviceInfo device_info = 6;
  required uint32 set_mut = 7;
  required uint32 register_vendor_type = 8;
  required uint32 reg_type = 9;
  required OnLineBusinessInfo online_busi_info = 10;
  required uint32 battery_status = 11;
}

message NormalIntCfgEntry {
  required uint32 key = 1;
  required int32 value = 2;
}

message NormalConfig {
  repeated NormalIntCfgEntry int_cfg = 1;
}

message CurAppState {
  required uint32 is_delay_request = 1;
  required uint32 app_status = 2;
  required uint32 silence_status = 3;
}

message UnknownStructure {
  required uint32 group_code = 1;
  required uint32 flag2 = 2;
}

message SsoSyncInfoRequest {
  // sync flag
  // 15 for partial
  // 143 for full
  // 735 register push
  required uint32 sync_flag = 1;
  required uint32 req_random = 2;
  // 应用前后台状态
  required uint32 cur_active_status = 4;
  required uint64 group_last_msg_time = 5;
  required SsoC2CSyncInfo c2c_sync_info = 6;
  required NormalConfig normal_config = 8;
  required RegisterInfo register_info = 9;
  required UnknownStructure unknown = 10;
  required CurAppState app_state = 11;
}

message RegisterResponse {
  optional string msg = 2;
}

message SsoSyncInfoResponse {
  optional RegisterResponse register_response = 7;
}